# kpa_backend_api

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/common/: models.py
apps/forms/: models.py  serializers.py  urls.py  views.py
apps/forms/migrations/: 0001_initial.py
kpa_backend/: settings.py  urls.py
postman/: REST API basics- CRUD, test & variable.postman_collection.json
